# SignalCompiler

./: CMakeLists.txt  README.md  gramatics.md
app/: CMakeLists.txt  main.cpp
include/Generator/: generator.h
include/Lexer/: Attributes.h  Error.h  LexemString.h  Lexer.h  Table.h
include/Parser/: parser.h  tree.h
src/: CMakeLists.txt
src/Generator/: generator.cpp
src/Lexer/: Attributes.cpp  Error.cpp  LexemString.cpp  Lexer.cpp  Table.cpp
src/Parser/: parser.cpp  tree.cpp
tests/: falseTest1.txt  falseTest2.txt  falseTest3.txt  falseTest4.txt  trueTest1.txt  trueTest2.txt
